Correctly handle scrollbar width in Ticket view overflow (#236)

--- a/web/src/styles/Ticket.scss
+++ b/web/src/styles/Ticket.scss
@@ -43,8 +43,7 @@ $tag-spacing: 5px;
 }
 
 .section {
-  // Workaround for horizontal overflow of the JiraIssues component.
-  max-width: 350px;
+  min-width: 0;
 }
 
 .tag {
